Fixed surface heating Labrador Sea and the Hudson Bay BC

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,43 +115,24 @@
     "    PML_hot_Pb = 30e-12 # summer polar mixed layer Pb\n",
     "\n",
     "    # Linear interpolate salinity endpoints:\n",
-    "    end_sal = [33.4, AW_sal]\n",
+    "    end_sal = [34.0, AW_sal]\n",
     "    end_dPb = [AO_Pb, AOAW_Pb]\n",
     "    dPb_BC  = np.interp(bdy_sal, end_sal, end_dPb)\n",
-    "    \n",
-    "    # Polar Mixed Layer:\n",
-    "    sal_PML   = [34.6, 35.1]\n",
-    "    dPb_PML   = [AO_Pb, AOAW_Pb] # PML_hot_Pb]\n",
-    "#     dPb_BC[:,:,grid:][(bdy_depth < 80) & (bdy_temp > 7.5)] = \\\n",
-    "#             np.interp(bdy_depth[(bdy_depth < 80)  & (bdy_temp > 7.5)], \\\n",
-    "#                                                            depth_PML, dPb_PML)\n",
-    "    lsl = 0; lsr = 180; #(bdy_temp[0:20,:,lsl:lsr] > 2.0)\n",
-    "    lsd = 26; # bottom depth\n",
-    "#     lsl=0; lsr=-1;\n",
-    "#     if mask: # mask summer solar heating influence:\n",
-    "#     dPb_BC[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.0)] = \\\n",
-    "#             np.interp(bdy_sal[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.0)], \\\n",
-    "#                       sal_PML, dPb_PML)\n",
-    "    dPb_BC[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.0) | \\\n",
-    "                            (bdy_sal[0:lsd,:,lsl:lsr] > 34.80) & (bdy_sal[0:lsd,:,lsl:lsr] < 35.15)] = \\\n",
-    "            np.interp(bdy_sal[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.0) | \\\n",
-    "                                               (bdy_sal[0:lsd,:,lsl:lsr] > 34.80) & (bdy_sal[0:lsd,:,lsl:lsr] < 35.15)], \\\n",
-    "                      sal_PML, dPb_PML)\n",
-    "#     lsl = 80; lsr = 160; lsd = 30;\n",
-    "#     dPb_BC[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.5)] = \\\n",
-    "#             np.interp(bdy_sal[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.5)], \\\n",
-    "#                       sal_PML, [AO_Pb, 20e-12])\n",
-    "\n",
-    "    lsl = 40; lsr = -1; lsd = 26;\n",
-    "    dPb_BC[0:lsd,:,lsl:lsr][(bdy_sal[0:lsd,:,lsl:lsr] < 35.18) & (bdy_sal[0:lsd,:,lsl:lsr] > 34.82)] = \\\n",
-    "            np.interp(bdy_sal[0:lsd,:,lsl:lsr][(bdy_sal[0:lsd,:,lsl:lsr] < 35.18) & (bdy_sal[0:lsd,:,lsl:lsr] > 34.82)], \\\n",
-    "                      sal_PML, [AO_Pb, 20e-12])\n",
-    "    \n",
+    "        \n",
     "    # Baffin Bay deep water:\n",
     "    end_temp_BBDW = [BBDW_temp, AW_temp]\n",
     "    end_dPb_BBDW  = [BBDW_Pb, AOAW_Pb]\n",
     "    dPb_BC[(bdy_sal > 34.8) & (bdy_temp <= 4.9)] = np.interp(bdy_temp[(bdy_sal > 34.8) & (bdy_temp <= 4.9)], \\\n",
     "                                                                  end_temp_BBDW, end_dPb_BBDW)    \n",
+    " \n",
+    "    # Polar Mixed Layer:\n",
+    "    if mask: # mask summer solar heating influence:\n",
+    "        for row in range(0,10):\n",
+    "            for loc in range(0,225):\n",
+    "                for dep in range(0,50):\n",
+    "                    if (dep < 24) & (dPb_BC[dep,row,loc] > 15e-12):\n",
+    "                        if np.nanmean(dPb_BC[dep:56-dep,row,loc]) < dPb_BC[dep,row,loc]:\n",
+    "                            dPb_BC[dep,row,loc] = np.nanmean(dPb_BC[dep:56-dep,row,loc])\n",
     "    \n",
     "    # Atlantic Water off Greenland:\n",
     "    grid = 150 # Grid point of central BB\n",
@@ -166,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,12 +175,6 @@
     "    end_dPb = [PML_Pb, ACW_Pb]\n",
     "    dPb_BC  = np.interp(bdy_temp, end_temp, end_dPb)\n",
     "\n",
-    "#     # ACW to wBSW\n",
-    "#     end_sal_ACW = [ACW_sal, wBSW_sal]\n",
-    "#     end_dPb_ACW = [ACW_Pb, wBSW_Pb]\n",
-    "#     dPb_BC[(bdy_sal > ACW_sal) & (bdy_sal < wBSW_sal)] = np.interp(bdy_sal[(bdy_sal > ACW_sal) & (bdy_sal < wBSW_sal)], \\\n",
-    "#                                                                    end_sal_ACW, end_dPb_ACW)\n",
-    "\n",
     "    # wBSW to AL\n",
     "    end_sal_AL = [wBSW_sal, AL_sal]\n",
     "    end_dPb_AL = [wBSW_Pb, AL_Pb]\n",
@@ -217,7 +192,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_HB_BC(bdy_temp, bdy_sal):\n",
+    "    # Pb end-members:\n",
+    "    PML_Pb   = 3e-12   # Polar Mixed Layer Pb\n",
+    "    AL_Pb    = 5e-12   # Atlantic Water Pb\n",
+    "    \n",
+    "    PML_sal   = 29      # Polar mixed layer salinity max\n",
+    "    AL_sal    = 34.8    # Atlantic Water salinity min\n",
+    "    \n",
+    "    # Linear interpolate endpoints between PML and ACW:\n",
+    "    end_sal = [PML_sal, AL_sal]\n",
+    "    end_dPb = [PML_Pb, AL_Pb]\n",
+    "    dPb_BC  = np.interp(bdy_sal, end_sal, end_dPb)\n",
+    "\n",
+    "    return dPb_BC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,11 +315,15 @@
     "dPb_wCB  = np.zeros((12,50,10,408))\n",
     "dPb_HB   = np.zeros((12,50,285,10))\n",
     "\n",
+    "\n",
     "for month in range(1,13):\n",
-    "    dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=False)\n",
+    "    if (month > 5) & (month < 12):\n",
+    "        dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=True)\n",
+    "    else:\n",
+    "        dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=False)\n",
     "    dPb_nCB[month-1,:,:,:] = create_AO_BC(nCB_T[month-1], nCB_S[month-1])\n",
     "    dPb_wCB[month-1,:,:,:] = create_AO_BC(wCB_T[month-1], wCB_S[month-1])\n",
-    "    dPb_HB[month-1,:,:,:]  = create_AO_BC(HB_T[month-1] , HB_S[month-1])"
+    "    dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])"
    ]
   },
   {
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,6 +347,13 @@
     "    \n",
     "    save_file(year, month)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
