add months to LS BC seasonal figure

--- a/paper3/M2-transect-boundary.ipynb
+++ b/paper3/M2-transect-boundary.ipynb
@@ -358,6 +358,7 @@
     "fig, ax = plt.subplots(3,4, figsize=(13, 10.5), dpi=300)\n",
     "\n",
     "axes = ax.ravel()\n",
+    "months=['January','February', 'March','April','May','June','July','August','September','October','November','December']\n",
     "\n",
     "for month in range(0,12):\n",
     "   \n",
@@ -366,7 +367,7 @@
     "    else:\n",
     "        plot_transect(axes[month], dPb_S_monthly[month,:,:,:]*1e12, vrange=(0,32), label='Dissolved Pb', cmap=cmocean.cm.thermal, labelling=True)\n",
     "        \n",
-    "    axes[month].set_title(f'Month: {month+1}', fontsize=8)\n",
+    "    axes[month].set_title(f'{months[month]}', fontsize=8)\n",
     "    \n",
     "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_explorations/LS_boundary_conditions_2015.jpg', dpi=300, bbox_inches='tight')"
    ]
