adjusted BBDW definition slightly after looking at year 2002

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "def load_climatology(year, month):        \n",
     "    # load year 2015 climatology of ANHA12 gridT file:\n",
-    "    df_gridT = xr.open_dataset(f'/data/brogalla/ANHA12/gridT_{year}_climatology_{month}.nc')\n",
+    "    df_gridT = xr.open_dataset(f'/data/brogalla/ANHA12/gridT_{year}_{month}.nc')\n",
     "    \n",
     "    bdy_temp = df_gridT['votemper'].values[0,:,:,:]\n",
     "    bdy_sal  = df_gridT['vosaline'].values[0,:,:,:]\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
     "    # Baffin Bay deep water:\n",
     "    end_temp_BBDW = [BBDW_temp, AW_temp]\n",
     "    end_dPb_BBDW  = [BBDW_Pb, AOAW_Pb]\n",
-    "    dPb_BC[(bdy_sal > 34.8) & (bdy_temp <= 4.9)] = np.interp(bdy_temp[(bdy_sal > 34.8) & (bdy_temp <= 4.9)], \\\n",
+    "    dPb_BC[(bdy_sal > 34.75) & (bdy_temp <= 4.9)] = np.interp(bdy_temp[(bdy_sal > 34.75) & (bdy_temp <= 4.9)], \\\n",
     "                                                                  end_temp_BBDW, end_dPb_BBDW)    \n",
     " \n",
     "    # Polar Mixed Layer:\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
     "            \"x4\": np.zeros(np.max(dPb_west_BC.shape))\n",
     "        },\n",
     "    )\n",
-    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb_OBC_20220729_{year}-{month:02}.nc', unlimited_dims='time_counter')\n",
+    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb_OBC_y{year}m{month:02}.nc', unlimited_dims='time_counter')\n",
     "    \n",
     "    return"
    ]
@@ -277,12 +277,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load climatology conditions: \n",
-    "year = 2015\n",
+    "year = 2002\n",
     "\n",
     "LS_T  = np.zeros((12,50,10,225)); LS_S  = np.zeros((12,50,10,225));\n",
     "nCB_T = np.zeros((12,50,579,20)); nCB_S = np.zeros((12,50,579,20));\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
