Fill NaNs with set value in boundary condition, otherwise NEMO is unhappy

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,12 @@
     "        dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=False)\n",
     "    dPb_nCB[month-1,:,:,:] = create_AO_BC(nCB_T[month-1], nCB_S[month-1])\n",
     "    dPb_wCB[month-1,:,:,:] = create_AO_BC(wCB_T[month-1], wCB_S[month-1])\n",
-    "    dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])"
+    "    dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])\n",
+    "    \n",
+    "dPb_LS[np.isnan(dPb_LS)]   = 1e-12\n",
+    "dPb_nCB[np.isnan(dPb_nCB)] = 1e-12\n",
+    "dPb_wCB[np.isnan(dPb_wCB)] = 1e-12\n",
+    "dPb_HB[np.isnan(dPb_HB)]   = 1e-12"
    ]
   },
   {
@@ -335,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,10 +355,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check that there are no NaN values in the files:\n",
+    "print('North BC # of NaNs:', sum(dPb_north_BC[np.isnan(dPb_north_BC)]))\n",
+    "print('East BC # of NaNs: ', sum(dPb_east_BC[np.isnan(dPb_east_BC)]))\n",
+    "print('South BC # of NaNs:', sum(dPb_south_BC[np.isnan(dPb_south_BC)]))\n",
+    "print('West BC # of NaNs: ', sum(dPb_west_BC[np.isnan(dPb_west_BC)]))"
+   ]
   },
   {
    "cell_type": "code",
