shifted boundary coordinates slightly and plotting transects at boundaries in surface field notebook to check locations

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +46,14 @@
     "rimwidthE  = 20\n",
     "\n",
     "# Boundary coordinates: (i1,i2,j1,j2)\n",
-    "bdy_NCB = (1600,imax,jmax,jmax) # Northern Canada Basin\n",
-    "bdy_WCB = (imax,imax,391,jmax)  # Western Canada Basin\n",
-    "bdy_LS  = (imin,imin,449,674)   # Baffin Bay\n",
-    "bdy_HB  = (1189,1474,291,291)   # Hudson Bay"
+    "# bdy_NCB = (1600,imax,jmax-rimwidthE,jmax) # Northern Canada Basin\n",
+    "# bdy_WCB = (imax-rimwidthN,imax,391,jmax)  # Western Canada Basin\n",
+    "# bdy_LS  = (imin,imin+rimwidthW,449,674)   # Baffin Bay\n",
+    "# bdy_HB  = (1189,1474,291,291+rimwidthS)   # Hudson Bay\n",
+    "bdy_NCB = (1599,2178,797-rimwidthE,797) # Northern Canada Basin\n",
+    "bdy_WCB = (2177-rimwidthN,2177,391,799)  # Western Canada Basin\n",
+    "bdy_LS  = (1141,1141+rimwidthW,447,672)   # Baffin Bay\n",
+    "bdy_HB  = (1191,1476,293,293+rimwidthS)   # Hudson Bay"
    ]
   },
   {
@@ -61,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,43 +281,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load climatology conditions: \n",
     "year = 2002\n",
     "\n",
-    "LS_T  = np.zeros((12,50,10,225)); LS_S  = np.zeros((12,50,10,225));\n",
-    "nCB_T = np.zeros((12,50,579,20)); nCB_S = np.zeros((12,50,579,20));\n",
-    "wCB_T = np.zeros((12,50,10,408)); wCB_S = np.zeros((12,50,10,408));\n",
-    "HB_T  = np.zeros((12,50,285,10)); HB_S  = np.zeros((12,50,285,10));\n",
+    "LS_T  = np.zeros((12,50,rimwidthS,225)); LS_S  = np.zeros((12,50,rimwidthS,225));\n",
+    "nCB_T = np.zeros((12,50,579,rimwidthE)); nCB_S = np.zeros((12,50,579,rimwidthE));\n",
+    "wCB_T = np.zeros((12,50,rimwidthN,408)); wCB_S = np.zeros((12,50,rimwidthN,408));\n",
+    "HB_T  = np.zeros((12,50,285,rimwidthW)); HB_S  = np.zeros((12,50,285,rimwidthW));\n",
     "\n",
     "for month in range(1,13):\n",
     "    temp, sal  = load_climatology(year, f'{month:02}')\n",
     "    \n",
-    "    LS_T[month-1,:,:,:]  = temp[:,bdy_LS[0]:bdy_LS[0]+rimwidthS,bdy_LS[2]:bdy_LS[3]]\n",
-    "    LS_S[month-1,:,:,:]  = sal[:,bdy_LS[0]:bdy_LS[0]+rimwidthS,bdy_LS[2]:bdy_LS[3]]\n",
-    "    nCB_T[month-1,:,:,:] = temp[:,bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]:bdy_NCB[3]+rimwidthE]\n",
-    "    nCB_S[month-1,:,:,:] = sal[:,bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]:bdy_NCB[3]+rimwidthE]\n",
-    "    wCB_T[month-1,:,:,:] = temp[:,bdy_WCB[0]:bdy_WCB[0]+rimwidthN,bdy_WCB[2]:bdy_WCB[3]]\n",
-    "    wCB_S[month-1,:,:,:] = sal[:,bdy_WCB[0]:bdy_WCB[0]+rimwidthN,bdy_WCB[2]:bdy_WCB[3]]\n",
-    "    HB_T[month-1,:,:,:]  = temp[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]+rimwidthW] \n",
-    "    HB_S[month-1,:,:,:]  = sal[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]+rimwidthW]"
+    "    LS_T[month-1,:,:,:]  = temp[:,bdy_LS[0]:bdy_LS[1],bdy_LS[2]:bdy_LS[3]]\n",
+    "    LS_S[month-1,:,:,:]  = sal[:,bdy_LS[0]:bdy_LS[1],bdy_LS[2]:bdy_LS[3]]\n",
+    "    nCB_T[month-1,:,:,:] = temp[:,bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]:bdy_NCB[3]]\n",
+    "    nCB_S[month-1,:,:,:] = sal[:,bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]:bdy_NCB[3]]\n",
+    "    wCB_T[month-1,:,:,:] = temp[:,bdy_WCB[0]:bdy_WCB[1],bdy_WCB[2]:bdy_WCB[3]]\n",
+    "    wCB_S[month-1,:,:,:] = sal[:,bdy_WCB[0]:bdy_WCB[1],bdy_WCB[2]:bdy_WCB[3]]\n",
+    "    HB_T[month-1,:,:,:]  = temp[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]] \n",
+    "    HB_S[month-1,:,:,:]  = sal[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create boundary conditions:\n",
-    "LS_depth = np.tile(depths, (225,10,1)).transpose()\n",
-    "dPb_LS   = np.zeros((12,50,10,225))\n",
-    "dPb_nCB  = np.zeros((12,50,579,20))\n",
-    "dPb_wCB  = np.zeros((12,50,10,408))\n",
-    "dPb_HB   = np.zeros((12,50,285,10))\n",
+    "LS_depth = np.tile(depths, (225,rimwidthS,1)).transpose()\n",
+    "dPb_LS   = np.zeros((12,50,rimwidthS,225))\n",
+    "dPb_nCB  = np.zeros((12,50,579,rimwidthE))\n",
+    "dPb_wCB  = np.zeros((12,50,rimwidthN,408))\n",
+    "dPb_HB   = np.zeros((12,50,285,rimwidthW))\n",
     "\n",
     "\n",
     "for month in range(1,13):\n",
@@ -328,7 +332,9 @@
     "dPb_LS[np.isnan(dPb_LS)]   = 1e-12\n",
     "dPb_nCB[np.isnan(dPb_nCB)] = 1e-12\n",
     "dPb_wCB[np.isnan(dPb_wCB)] = 1e-12\n",
-    "dPb_HB[np.isnan(dPb_HB)]   = 1e-12"
+    "dPb_HB[np.isnan(dPb_HB)]   = 1e-12\n",
+    "\n",
+    "## or base on bathy"
    ]
   },
   {
@@ -340,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
