shifting BC coordinates to match NEMO ones

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,10 +50,74 @@
     "# bdy_WCB = (imax-rimwidthN,imax,391,jmax)  # Western Canada Basin\n",
     "# bdy_LS  = (imin,imin+rimwidthW,449,674)   # Baffin Bay\n",
     "# bdy_HB  = (1189,1474,291,291+rimwidthS)   # Hudson Bay\n",
-    "bdy_NCB = (1599,2178,797-rimwidthE,797) # Northern Canada Basin\n",
-    "bdy_WCB = (2177-rimwidthN,2177,391,799)  # Western Canada Basin\n",
-    "bdy_LS  = (1141,1141+rimwidthW,447,672)   # Baffin Bay\n",
-    "bdy_HB  = (1191,1476,293,293+rimwidthS)   # Hudson Bay"
+    "## bdy_NCB = (1599,2178,797-rimwidthE,797) # Northern Canada Basin\n",
+    "## bdy_WCB = (2177-rimwidthN,2177,391,799)  # Western Canada Basin\n",
+    "## bdy_LS  = (1141,1141+rimwidthW,447,672)   # Baffin Bay\n",
+    "## bdy_HB  = (1191,1476,293,293+rimwidthS)   # Hudson Bay\n",
+    "### bdy_NCB = (1599,2178,797-rimwidthE,797) # Northern Canada Basin\n",
+    "### bdy_WCB = (2177-rimwidthN,2177,391,799)  # Western Canada Basin\n",
+    "### bdy_LS  = (1141,1141+rimwidthW,447,672)   # Baffin Bay\n",
+    "### bdy_HB  = (1191-17,1476-17,293+2,293+rimwidthS+2)   # Hudson Bay\n",
+    "\n",
+    "# Worked better, but possibly 1 long and generally shifted by 1\n",
+    "# bdy_NCB = (1599,2178,778,798) # Northern Canada Basin\n",
+    "# bdy_WCB = (2168,2178,391,798) # Western Canada Basin\n",
+    "# bdy_LS  = (1141,1151,447,673) # Baffin Bay\n",
+    "# bdy_HB  = (1191,1473,292,302) # Hudson Bay\n",
+    "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin # tried 777, 797; off\n",
+    "bdy_WCB = (2168,2178,390,797) # Western Canada Basin # tried 2167, 2177; off.\n",
+    "bdy_LS  = (1140,1150,446,672) # Baffin Bay ## works well\n",
+    "bdy_HB  = (1190,1472,291,301) # Hudson Bay ## works well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python boundary dimensions (should be same length):\n",
+      "nCB dimensions:  579 20\n",
+      "wCB dimensions:  10 407\n",
+      "LS dimensions:  10 226\n",
+      "HB dimensions:  282 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Python boundary dimensions (should be same length):')\n",
+    "print('nCB dimensions: ', bdy_NCB[1]-bdy_NCB[0],  bdy_NCB[3]-bdy_NCB[2])\n",
+    "print('wCB dimensions: ', bdy_WCB[1]-bdy_WCB[0],  bdy_WCB[3]-bdy_WCB[2])\n",
+    "print('LS dimensions: ', bdy_LS[1]-bdy_LS[0],  bdy_LS[3]-bdy_LS[2])\n",
+    "print('HB dimensions: ', bdy_HB[1]-bdy_HB[0],  bdy_HB[3]-bdy_HB[2]) # index in 0:5 should be one longer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fortran boundary dimensions\n",
+      "nCB dimensions:  578\n",
+      "wCB dimensions:  406\n",
+      "LS dimensions:  225\n",
+      "HB dimensions:  281\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Fortran boundary dimensions')\n",
+    "print('nCB dimensions: ', 1038-460) # 638\n",
+    "print('wCB dimensions: ', 638-232) # 1038\n",
+    "print('LS dimensions: ', 513-288) # 2\n",
+    "print('HB dimensions: ', 333-52) # 133"
    ]
   },
   {
@@ -65,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,17 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load climatology conditions: \n",
     "year = 2002\n",
     "\n",
-    "LS_T  = np.zeros((12,50,rimwidthS,225)); LS_S  = np.zeros((12,50,rimwidthS,225));\n",
-    "nCB_T = np.zeros((12,50,579,rimwidthE)); nCB_S = np.zeros((12,50,579,rimwidthE));\n",
-    "wCB_T = np.zeros((12,50,rimwidthN,408)); wCB_S = np.zeros((12,50,rimwidthN,408));\n",
-    "HB_T  = np.zeros((12,50,285,rimwidthW)); HB_S  = np.zeros((12,50,285,rimwidthW));\n",
+    "LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
+    "nCB_T = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2])); nCB_S = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2]));\n",
+    "wCB_T = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2])); wCB_S = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2]));\n",
+    "HB_T  = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]));     HB_S  = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]));\n",
     "\n",
     "for month in range(1,13):\n",
     "    temp, sal  = load_climatology(year, f'{month:02}')\n",
@@ -308,17 +372,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create boundary conditions:\n",
-    "LS_depth = np.tile(depths, (225,rimwidthS,1)).transpose()\n",
-    "dPb_LS   = np.zeros((12,50,rimwidthS,225))\n",
-    "dPb_nCB  = np.zeros((12,50,579,rimwidthE))\n",
-    "dPb_wCB  = np.zeros((12,50,rimwidthN,408))\n",
-    "dPb_HB   = np.zeros((12,50,285,rimwidthW))\n",
-    "\n",
+    "LS_depth = np.tile(depths, (bdy_LS[3]-bdy_LS[2],rimwidthS,1)).transpose()\n",
+    "dPb_LS   = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]))\n",
+    "dPb_nCB  = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2]))\n",
+    "dPb_wCB  = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2]))\n",
+    "dPb_HB   = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]))\n",
     "\n",
     "for month in range(1,13):\n",
     "    if (month > 5) & (month < 12):\n",
@@ -329,10 +392,10 @@
     "    dPb_wCB[month-1,:,:,:] = create_AO_BC(wCB_T[month-1], wCB_S[month-1])\n",
     "    dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])\n",
     "    \n",
-    "dPb_LS[np.isnan(dPb_LS)]   = 1e-12\n",
-    "dPb_nCB[np.isnan(dPb_nCB)] = 1e-12\n",
-    "dPb_wCB[np.isnan(dPb_wCB)] = 1e-12\n",
-    "dPb_HB[np.isnan(dPb_HB)]   = 1e-12\n",
+    "dPb_LS[np.isnan(dPb_LS)]   = 40e-12\n",
+    "dPb_nCB[np.isnan(dPb_nCB)] = 40e-12\n",
+    "dPb_wCB[np.isnan(dPb_wCB)] = 40e-12\n",
+    "dPb_HB[np.isnan(dPb_HB)]   = 40e-12\n",
     "\n",
     "## or base on bathy"
    ]
@@ -346,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
