all boundaries fixed (reversed order for CB)

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,12 +392,22 @@
     "    dPb_wCB[month-1,:,:,:] = create_AO_BC(wCB_T[month-1], wCB_S[month-1])\n",
     "    dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])\n",
     "    \n",
-    "dPb_LS[np.isnan(dPb_LS)]   = 40e-12\n",
-    "dPb_nCB[np.isnan(dPb_nCB)] = 40e-12\n",
-    "dPb_wCB[np.isnan(dPb_wCB)] = 40e-12\n",
-    "dPb_HB[np.isnan(dPb_HB)]   = 40e-12\n",
+    "dPb_LS[np.isnan(dPb_LS)]   = 3e-12\n",
+    "dPb_nCB[np.isnan(dPb_nCB)] = 3e-12\n",
+    "dPb_wCB[np.isnan(dPb_wCB)] = 3e-12\n",
+    "dPb_HB[np.isnan(dPb_HB)]   = 3e-12\n",
     "\n",
     "## or base on bathy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dPb_wCBr = np.flip(dPb_wCB, axis=2)\n",
+    "dPb_nCBr = np.flip(dPb_nCB, axis=3)"
    ]
   },
   {
@@ -409,22 +419,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "for month in range(1,13):\n",
-    "    dPb_north_BC = reshape_boundary(rimwidthN, dPb_wCB[month-1], 'C')\n",
-    "    dPb_east_BC  = reshape_boundary(rimwidthE, dPb_nCB[month-1], 'F')\n",
-    "    dPb_south_BC = reshape_boundary(rimwidthS, dPb_LS[month-1], 'C')\n",
-    "    dPb_west_BC  = reshape_boundary(rimwidthW, dPb_HB[month-1], 'F')\n",
+    "    dPb_north_BC = reshape_boundary(rimwidthN, dPb_wCBr[month-1], 'C')\n",
+    "    dPb_east_BC  = reshape_boundary(rimwidthE, dPb_nCBr[month-1], 'F')\n",
+    "    dPb_south_BC = reshape_boundary(rimwidthS, dPb_LS[month-1], 'C') ## works\n",
+    "    dPb_west_BC  = reshape_boundary(rimwidthW, dPb_HB[month-1], 'F') ## works\n",
     "    \n",
     "    save_file(year, month)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
