added year 2003 boundary conditions

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -46,24 +46,6 @@
     "rimwidthE  = 20\n",
     "\n",
     "# Boundary coordinates: (i1,i2,j1,j2)\n",
-    "# bdy_NCB = (1600,imax,jmax-rimwidthE,jmax) # Northern Canada Basin\n",
-    "# bdy_WCB = (imax-rimwidthN,imax,391,jmax)  # Western Canada Basin\n",
-    "# bdy_LS  = (imin,imin+rimwidthW,449,674)   # Baffin Bay\n",
-    "# bdy_HB  = (1189,1474,291,291+rimwidthS)   # Hudson Bay\n",
-    "## bdy_NCB = (1599,2178,797-rimwidthE,797) # Northern Canada Basin\n",
-    "## bdy_WCB = (2177-rimwidthN,2177,391,799)  # Western Canada Basin\n",
-    "## bdy_LS  = (1141,1141+rimwidthW,447,672)   # Baffin Bay\n",
-    "## bdy_HB  = (1191,1476,293,293+rimwidthS)   # Hudson Bay\n",
-    "### bdy_NCB = (1599,2178,797-rimwidthE,797) # Northern Canada Basin\n",
-    "### bdy_WCB = (2177-rimwidthN,2177,391,799)  # Western Canada Basin\n",
-    "### bdy_LS  = (1141,1141+rimwidthW,447,672)   # Baffin Bay\n",
-    "### bdy_HB  = (1191-17,1476-17,293+2,293+rimwidthS+2)   # Hudson Bay\n",
-    "\n",
-    "# Worked better, but possibly 1 long and generally shifted by 1\n",
-    "# bdy_NCB = (1599,2178,778,798) # Northern Canada Basin\n",
-    "# bdy_WCB = (2168,2178,391,798) # Western Canada Basin\n",
-    "# bdy_LS  = (1141,1151,447,673) # Baffin Bay\n",
-    "# bdy_HB  = (1191,1473,292,302) # Hudson Bay\n",
     "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin # tried 777, 797; off\n",
     "bdy_WCB = (2168,2178,390,797) # Western Canada Basin # tried 2167, 2177; off.\n",
     "bdy_LS  = (1140,1150,446,672) # Baffin Bay ## works well\n",
@@ -72,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,12 +327,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load climatology conditions: \n",
-    "year = 2002\n",
+    "year = 2003\n",
     "\n",
     "LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
     "nCB_T = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2])); nCB_S = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2]));\n",
@@ -372,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,22 +401,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "for month in range(1,13):\n",
     "    dPb_north_BC = reshape_boundary(rimwidthN, dPb_wCBr[month-1], 'C')\n",
     "    dPb_east_BC  = reshape_boundary(rimwidthE, dPb_nCBr[month-1], 'F')\n",
-    "    dPb_south_BC = reshape_boundary(rimwidthS, dPb_LS[month-1], 'C') ## works\n",
-    "    dPb_west_BC  = reshape_boundary(rimwidthW, dPb_HB[month-1], 'F') ## works\n",
+    "    dPb_south_BC = reshape_boundary(rimwidthS, dPb_LS[month-1], 'C')\n",
+    "    dPb_west_BC  = reshape_boundary(rimwidthW, dPb_HB[month-1], 'F')\n",
     "    \n",
     "    save_file(year, month)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
